--- a/PezzaApi/PezzaApi.csproj
+++ b/PezzaApi/PezzaApi.csproj
@@ -18,4 +18,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\PezzaApi.Menu\PezzaApi.Menu.csproj" />
+  </ItemGroup>
+
 </Project>
