--- a/PezzaApi/PezzaApi.csproj
+++ b/PezzaApi/PezzaApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\PezzaApi.Menu\PezzaApi.Menu.csproj" />
+    <ProjectReference Include="..\PezzaApi.User\PezzaApi.User.csproj" />
   </ItemGroup>
 
 </Project>
