--- a/PezzaApi/appsettings.json
+++ b/PezzaApi/appsettings.json
@@ -9,4 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=Pezza;Username=postgres;Password=admin"
   }
+  "Jwt": {
+    "Key": "Thisismysupersecretkey",
+    "Issuer":  "Pezza.com"
+  }
 }
