--- a/PezzaApi/appsettings.json
+++ b/PezzaApi/appsettings.json
@@ -2,15 +2,17 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft.AspNetCore.Authentication": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=Pezza;Username=postgres;Password=admin"
-  }
+  },
   "Jwt": {
-    "Key": "Thisismysupersecretkey",
-    "Issuer":  "Pezza.com"
+    "Key": "MySuperSecretKeyForAuthenticationIsHere",
+    "Issuer": "PezzaApp",
+    "Audience": "PezzaAppUsers"
   }
 }
