Added full authentication and authorization for registering + logining users.

--- a/PezzaApi/appsettings.json
+++ b/PezzaApi/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "YourSecretKeyHereMustBeAtLeast32CharactersLong",
+    "Issuer": "PezzaApp",
+    "Audience": "PezzaAppUsers",
+    "ExpireMinutes": 60
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=Pezza;Username=postgres;Password=admin"
   }
