--- a/.gitignore
+++ b/.gitignore
@@ -485,27 +485,30 @@ $RECYCLE.BIN/
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
 # Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
+*./dist
+*./tmp
+*./out-tsc
+*./bazel-out
+*.tsbuildinfo
+*/.cache
 
 # Node
-/node_modules
-npm-debug.log
-yarn-error.log
+
+*./node_modules
+*.npm-debug.log
+*.yarn-error.log
 
 # IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
+*.idea/
+*.project
+*.classpath
+*.c9/
 *.launch
-.settings/
+*.settings/
 *.sublime-workspace
 
 # Visual Studio Code
-.vscode/*
+*.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -513,15 +516,19 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
+*./.angular/
+*./.angular/cache
+*.sass-cache/
+*./connect.lock
+*./coverage
+*./libpeerconnection.log
+*.testem.log
+*./typings
 
 # System files
-.DS_Store
-Thumbs.db
+*.DS_Store
+*.Thumbs.db
 
+*./.tsbuildinfo
+*./.angular/cache/
+*/.angular/cache/
